feat: 添加中文登录和角色权限
